# datasette-debug-permissions

./: README.md  datasette_debug_permissions.py  pyproject.toml
tests/: test_datasette_debug_permissions.py
